[gd_scene load_steps=2 format=3 uid="uid://cu40ycwrt7set"]

[ext_resource type="Script" path="res://scenes/components/stats/mana_component.gd" id="1_bow0c"]

[node name="ManaComponent" type="Node3D"]
script = ExtResource("1_bow0c")

[node name="RegenTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
